<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<EditText
		android:id="@+id/toot_text"
		android:layout_width="match_parent"
		android:layout_height="0px"
		android:layout_weight="1"
		android:gravity="top"
		android:inputType="textMultiLine|textCapSentences"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:padding="8dp">

		<TextView
			android:id="@+id/char_counter"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

	</LinearLayout>

</LinearLayout>