...
		android:layout_marginStart="-4dp"
		android:layout_marginTop="-8dp"
		android:layout_marginEnd="12dp"
		android:duplicateParentState="true"/>

	<ImageView
		android:id="@+id/more"
		android:layout_width="24dp"
		android:layout_height="24dp"
		android:layout_alignParentTop="true"
		android:layout_alignParentEnd="true"
		android:layout_marginTop="-2dp"
		android:layout_marginEnd="-2dp"
...
